--- a/src/components/layout/Layout.scss
+++ b/src/components/layout/Layout.scss
@@ -1,7 +1,7 @@
 @import "../../css_config/mixins.scss";
 
 .header {
-  width: 100vw;
+  width: 100%;
   padding: 20px 50px;
   background-color: rgba(140, 195, 47, 0.2);
 }
