--- a/src/components/footer/Footer.scss
+++ b/src/components/footer/Footer.scss
@@ -1,24 +1,36 @@
 @import "../../css_config/mixins.scss";
 
 .footer-content {
-  margin-top: 30px;
+  margin-top: 0px;
   width: 100%;
   display: flex;
+  flex-direction: column;
   justify-content: space-between;
-  align-items: center;
+  @include md {
+    margin-top: 30px;
+    align-items: center;
+    flex-direction: row;
+  }
 }
 
 .f-title {
-  margin-bottom: 20px;
+  margin-bottom: 0px;
   font-weight: bolder;
   font-size: 1.2rem;
+  @include md {
+    margin-bottom: 20px;
+  }
 }
 
 .f-info {
+  margin-top: 10px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   gap: 10px;
+  @include md {
+    margin-top: 0;
+  }
 }
 
 .logo-f {
