--- a/src/components/main/Main.scss
+++ b/src/components/main/Main.scss
@@ -4,16 +4,24 @@
   margin-top: 50px;
   width: 100%;
   display: flex;
+  flex-direction: column;
   gap: 20px;
+  @include md {
+    flex-direction: row;
+  }
   .categories {
-    width: 30%;
+    width: 100%;
     padding: 20px;
-    height: 600px;
+    height: auto;
     display: flex;
     flex-direction: column;
     gap: 20px;
     border: 1px solid rgba(128, 128, 128, 0.3);
     border-radius: 20px;
+    @include md {
+      width: 30%;
+      height: 600px;
+    }
     .title {
       padding-left: 10px;
       font-size: 0.8rem;
@@ -35,12 +43,15 @@
     }
   }
   .products-listing {
-    width: 70%;
+    width: 100%;
     display: flex;
     flex-wrap: wrap;
     gap: 10px;
+    @include md {
+      width: 70%;
+    }
     .product {
-      width: 30%;
+      width: 45%;
       display: flex;
       flex-direction: column;
       justify-content: space-around;
@@ -49,14 +60,26 @@
       border: 1px solid rgba(128, 128, 128, 0.3);
       padding: 10px;
       border-radius: 10px;
+      font-size: 0.8rem;
+      @include md {
+        width: 30%;
+        font-size: 1rem;
+      }
       img {
         width: 70%;
       }
       .pricing {
+        font-size: 0.8rem;
         .disc-price {
           color: #0da487;
-          font-size: 1.3rem;
+          font-size: 1rem;
           font-weight: bolder;
+          @include md {
+            font-size: 1.3rem;
+          }
+        }
+        @include md {
+          font-size: 1rem;
         }
       }
     }
