--- a/src/index.scss
+++ b/src/index.scss
@@ -18,8 +18,12 @@ button {
 }
 
 .container {
-  max-width: 1200px;
-  margin: 0 auto;
+  width: 100%;
+  padding: 15px 10px;
+  @include md {
+    max-width: 1200px;
+    margin: 0 auto;
+  }
 }
 
 a {
