--- a/src/components/layout/Layout.scss
+++ b/src/components/layout/Layout.scss
@@ -2,8 +2,14 @@
 
 .header {
   width: 100%;
-  padding: 20px 50px;
+  padding: 10px 20px;
   background-color: rgba(140, 195, 47, 0.2);
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  @include md {
+    padding: 20px 50px;
+  }
 }
 
 .main-container {
@@ -20,4 +26,8 @@
   margin-top: 20px;
   margin-bottom: 20px;
   width: 100vw;
+}
+
+.hidden {
+  display: none;
 }
